# CS557-projects

./: .gitignore  LICENSE
programming_assignment_1/: CMakeLists.txt  Laplacian_KJI.cpp  Makefile
programming_assignment_2/: CMakeLists.txt  ConjugateGradients.cpp  Makefile  MergedKernels.cpp  MergedKernels.h  Timer.h  main.cpp
programming_assinment_1/: Laplacian_IKJ.cpp  Makefile  main.cpp
